Working jwt with hardcoded role